BunyoService streamek rendberakása
A stream-hez inicializált változók törlése, egyből a valtozóknak átadott értéken történik a streamelés.